--- a/04-steps/starter/src/App.css
+++ b/04-steps/starter/src/App.css
@@ -111,27 +111,31 @@ h3 {
 }
 
 .item {
-  /* margin: 1.5rem; */
+  font-size: xx-large;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  padding: 3rem;
+  transition: all 1s;
 }
 
 .item-1 {
   grid-column: span 3;
-  height: 3rem;
+  grid-row: 1;
 }
 
 .item-2 {
-  grid-column: span 2;
-  /* height: 4rem; */
+  grid-column: 1/3;
+  grid-row: 2;
 }
 
 .item-3 {
-  grid-column: span 2;
-  grid-row: 3/4;
-  height: 7rem;
+  grid-column: 1/3;
+  grid-row: 3;
 }
 
 .item-4 {
-  grid-column: 3/4;
-  grid-row: 2;
-  height: 11rem;
+  grid-column: 3;
+  grid-row: 2/4;
 }
