--- a/05-travel-list/starter/src/index.css
+++ b/05-travel-list/starter/src/index.css
@@ -129,6 +129,8 @@ input[type="checkbox"] {
   font-size: 1.8rem;
   padding: 0.8rem;
   transform: translateY(2px);
+  /* Custom */
+  color: red;
 }
 
 .stats {
