--- a/06-eat-n-split/starter/src/Components/Button/button.css
+++ b/06-eat-n-split/starter/src/Components/Button/button.css
@@ -1,8 +1,15 @@
 button {
-  min-width: 7rem;
-  min-height: 2rem;
+  padding: 0.8rem 1.2rem;
   background-color: gold;
-  border-radius: 12px;
+  border-radius: 7px;
   border-style: none;
   font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+button:hover {
+  border: solid 1px gold;
+  background-color: black;
+  color: gold;
 }
