--- a/06-eat-n-split/starter/src/Components/People/people.css
+++ b/06-eat-n-split/starter/src/Components/People/people.css
@@ -1,11 +1,39 @@
-.card {
-  width: 20rem;
-  height: 5rem;
+ul {
+  list-style: none;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 0.4rem;
+  font-size: 1.4rem;
+  margin-bottom: 2rem;
 }
 
-img {
+.card {
+  display: grid;
+  grid-template-columns: 4.8rem 1fr auto;
+  column-gap: 1.6rem;
+  align-items: center;
+  border-radius: 7px;
+  padding: 1.2rem;
+  background-color: #fff;
+}
+
+.card img {
+  grid-row: span 2;
   border-radius: 50%;
+}
+
+.card h3 {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.card p {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+.card button {
+  grid-column: 3;
+  grid-row: span 2;
+  min-width: 7rem;
 }
