highlighting active panel with selected class

--- a/06-eat-n-split/starter/src/Components/People/people.css
+++ b/06-eat-n-split/starter/src/Components/People/people.css
@@ -17,6 +17,10 @@ ul {
   background-color: #fff;
 }
 
+.selected {
+  background-color: #ffe4bc;
+}
+
 .card img {
   grid-row: span 2;
   border-radius: 50%;
