--- a/07-usepopcorn/starter/src/index.css
+++ b/07-usepopcorn/starter/src/index.css
@@ -33,10 +33,10 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
+  height: 7.2rem;
+  padding: 0 3.2rem;
   background-color: var(--color-primary);
   border-radius: 0.9rem;
-  padding: 0.9rem;
-  height: 7.2rem;
 }
 
 .main {
@@ -96,6 +96,8 @@ body {
   transition: all 0.3s;
   color: var(--color-text);
   /* background-color: var(--color-background-900); */
+  box-shadow: 0.8rem 0.8rem 0.4rem rgba(0, 0, 0, 0.1);
+  transform: translateY(-2px);
 
   background-color: var(--color-primary-light);
 }
@@ -106,8 +108,8 @@ body {
 
 .search:focus {
   outline: none;
-  box-shadow: 0 2.4rem 2.4rem rgba(0, 0, 0, 0.1);
-  transform: translateY(-2px);
+  transform: translateY(2px);
+  box-shadow: none;
 }
 
 .num-results {
@@ -151,6 +153,10 @@ body {
   align-items: center;
   padding: 1.6rem 3.2rem;
   border-bottom: 1px solid var(--color-background-100);
+}
+
+.list li:hover {
+  background-color: var(--color-background-100);
 }
 
 .list.list-movies li {
