--- a/07-usepopcorn/starter/src/index.css
+++ b/07-usepopcorn/starter/src/index.css
@@ -52,7 +52,8 @@ body {
   max-width: 42rem;
   background-color: var(--color-background-500);
   border-radius: 0.9rem;
-  overflow: hidden;
+  overflow: scroll;
+  scrollbar-width: none;
   position: relative;
 }
 
@@ -136,7 +137,8 @@ body {
 .list {
   list-style: none;
   padding: 0.8rem 0;
-  overflow: hidden;
+  overflow: scroll;
+  scrollbar-width: none;
 }
 
 .list-watched {
