--- a/07-usepopcorn/starter/src/index.css
+++ b/07-usepopcorn/starter/src/index.css
@@ -8,6 +8,7 @@
   --color-background-900: #212529;
   --color-red: #fa5252;
   --color-red-dark: #e03131;
+  --color-gold: #ffd700;
 }
 
 * {
@@ -339,7 +340,7 @@ body {
   justify-content: center;
 }
 
-.stars {
+/* .stars {
   display: flex;
   background-color: var(--color-background-100);
   padding: 1.8rem;
@@ -366,7 +367,7 @@ body {
   font-size: 1.8rem;
   font-weight: bold;
   transform: translateY(-2px);
-}
+} */
 
 /*
 SPACING SYSTEM (px)
