--- a/challenges/challenge-05-text-expander/src/index.css
+++ b/challenges/challenge-05-text-expander/src/index.css
@@ -11,6 +11,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --color-light-dark: #343a40;
 }
 
 a {
