--- a/10-react-quiz/starter/src/index.css
+++ b/10-react-quiz/starter/src/index.css
@@ -36,6 +36,10 @@ body {
   justify-content: center;
 }
 
+.main {
+  width: 50rem;
+}
+
 .app-header {
   display: flex;
   justify-content: space-between;
@@ -51,6 +55,36 @@ img {
 h1 {
   font-family: "Codystar";
   font-size: 5.6rem;
+}
+
+h2 {
+  font-size: 3.6rem;
+  margin-bottom: 2rem;
+}
+
+h3 {
+  font-size: 2.4rem;
+  font-weight: 600;
+  margin-bottom: 4rem;
+}
+
+.start {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.btn {
+  display: block;
+  font-family: inherit;
+  color: inherit;
+  font-size: 2rem;
+  border: 2px solid var(--color-dark);
+  background-color: var(--color-dark);
+  padding: 1.2rem 2.4rem;
+  cursor: pointer;
+  border-radius: 100px;
+  transition: 0.3s;
 }
 
 /* For counter exercise */
