--- a/10-react-quiz/starter/src/index.css
+++ b/10-react-quiz/starter/src/index.css
@@ -162,8 +162,32 @@ progress {
   transform: translateX(2rem);
 }
 
+.result {
+  background-color: var(--color-theme);
+  color: var(--color-light);
+  border-radius: 100px;
+  text-align: center;
+  padding: 2rem 0;
+  font-size: 2.2rem;
+  font-weight: 500;
+  margin-bottom: 1.6rem;
+}
+
+.summary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3.5rem;
+  border: 4px solid var(--color-theme);
+  border-radius: 50px;
+  padding: 6rem 2rem;
+  text-align: center;
+}
+
 .timer {
   float: left;
+  width: 100px;
+  text-align: center;
   font-size: 1.8rem;
   color: var(--color-medium);
   border: 2px solid var(--color-dark);
