--- a/11-worldwise/worldwise/src/components/PageNav.module.css
+++ b/11-worldwise/worldwise/src/components/PageNav.module.css
@@ -1,18 +1,34 @@
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .nav ul {
   list-style: none;
   display: flex;
-  justify-content: space-between;
-  padding: 1rem 2rem;
+  align-items: center;
+  gap: 4rem;
 }
 
-.navLink {
+.nav a:link,
+.nav a:visited {
   text-decoration: none;
-  border-radius: 100px;
-  color: var(--color-dark--0);
+  color: var(--color-light--2);
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
-.nav :global(.active) {
+/* CSS Modules feature */
+.nav a:global(.active) {
+  color: var(--color-brand--2);
+}
+
+a.ctaLink:link,
+a.ctaLink:visited {
   background-color: var(--color-brand--2);
-  padding: 0.5rem 1rem;
-  color: var(--color-light--0);
+  color: var(--color-dark--0);
+  padding: 0.8rem 2rem;
+  border-radius: 7px;
 }
