--- a/16-fast-react-pizza/fast-react-pizza/src/index.css
+++ b/16-fast-react-pizza/fast-react-pizza/src/index.css
@@ -51,6 +51,25 @@
   }
 }
 
+@keyframes slide-up {
+  from {
+    bottom: -100%; /* Start completely off-screen */
+    opacity: 0;
+  }
+  to {
+    bottom: 0; /* End at its intended position */
+    opacity: 1;
+  }
+}
+
+.animate-slide-up {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  animation: slide-up 0.5s ease-out;
+}
+
 @layer utility {
   .h-screen {
     height: 100dvh;
