--- a/16-fast-react-pizza/fast-react-pizza/src/index.css
+++ b/16-fast-react-pizza/fast-react-pizza/src/index.css
@@ -7,7 +7,7 @@
 
 @layer components {
   .input {
-    @apply px-4 py-2 text-sm transition-all duration-300 border rounded-full grow md:px-6 md:py-4 focus:ring-2 focus:ring-yellow-400 focus:outline-hidden border-stone-200 placeholder:text-stone-400;
+    @apply px-4 py-2 text-sm transition-all duration-300 border rounded-full border-stone-200 placeholder:text-stone-400 focus:outline-none focus:ring focus:ring-yellow-400 md:px-6 md:py-3;
   }
 
   /* https://dev.to/afif/i-made-100-css-loaders-for-your-next-project-4eje */
